--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <div>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis facilis illo atque corporis neque, dolores laboriosam debitis maxime reprehenderit! Quasi, obcaecati ratione repellendus enim nobis quae. Rem voluptatum excepturi repellat.
+        </div>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur perferendis, explicabo ipsa nulla voluptas, eum inventore sed atque architecto veniam ducimus temporibus ex possimus repellendus quasi assumenda tenetur sapiente similique.
+        </div>
+        <div>
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, nam quidem aspernatur animi eaque optio? Iure voluptate, debitis mollitia facilis labore doloremque obcaecati, quas temporibus fugiat nulla aliquid veritatis omnis.
+        </div>
+    </main>
 </body>
 </html>
